@startuml BlassaCarFinalClassDiagram
left to right direction
hide methods

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 65
skinparam ranksep 65
skinparam ArrowFontSize 11

title BlassaCar - Final Class Diagram

class User {
  id : bigint
  firstName : string
  lastName : string
  email : string
  phone : string
  passwordHash : string
  profilePhoto : string
  role : string
  emailVerified : boolean
  phoneVerified : boolean
  createdAt : datetime
  updatedAt : datetime
}

class DriverProfile {
  id : bigint
  user_id : bigint
  cinNumber : string
  cinPhotoFront : string
  cinPhotoBack : string
  cinVerified : boolean
  avgRating : decimal
  totalTrips : int
  createdAt : datetime
  updatedAt : datetime
}

class Vehicle {
  id : bigint
  driver_profile_id : bigint
  brand : string
  model : string
  photo : string
  createdAt : datetime
  updatedAt : datetime
}

class Ride {
  id : bigint
  driver_profile_id : bigint
  vehicle_id : bigint
  departureCityId : bigint
  arrivalCityId : bigint
  departureTime : datetime
  pricePerSeat : decimal
  totalSeats : int
  availableSeats : int
  meetingPoint : string
  notes : text
  status : string
  createdAt : datetime
  updatedAt : datetime
}

class City {
  id : bigint
  name : string
}

class Booking {
  id : bigint
  ride_id : bigint
  traveler_id : bigint
  seatsReserved : int
  status : string
  bookedAt : datetime
  createdAt : datetime
  updatedAt : datetime
}

class Review {
  id : bigint
  booking_id : bigint
  traveler_id : bigint
  driver_profile_id : bigint
  rating : int
  comment : text
  createdAt : datetime
  updatedAt : datetime
}

class Notification {
  id : bigint
  user_id : bigint
  type : string
  channel : string
  title : string
  message : text
  ride_id : bigint nullable
  booking_id : bigint nullable
  isRead : boolean
  createdAt : datetime
}

' -------------------------
' Layout only
' -------------------------
DriverProfile -[hidden]right- Vehicle
Vehicle -[hidden]right- Ride
Ride -[hidden]right- City

User -[hidden]right- Booking
Booking -[hidden]right- Review
Review -[hidden]right- Notification

DriverProfile -[hidden]down- User
Ride -[hidden]down- Booking

' -------------------------
' Real relationships
' -------------------------

User "1" --> "0..1" DriverProfile : has

DriverProfile "1" --> "0..*" Vehicle : owns
DriverProfile "1" --> "0..*" Ride : publishes

Vehicle "1" --> "0..*" Ride : used in

Ride "0..*" --> "1" City : departure
Ride "0..*" --> "1" City : arrival

User "1" --> "0..*" Booking : makes
Ride "1" --> "0..*" Booking : has

Booking "1" --> "0..1" Review : generates
User "1" --> "0..*" Review : writes
DriverProfile "1" --> "0..*" Review : receives

User "1" --> "0..*" Notification : receives
Ride "1" --> "0..*" Notification : relates to
Booking "1" --> "0..*" Notification : relates to

@enduml